Added stuff for automigration

--- a/WebEF/Web.config
+++ b/WebEF/Web.config
@@ -14,10 +14,15 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <connectionStrings>
+  <!-- <connectionStrings>
     <add name="PeopleDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MVCPeople.mdf;Initial Catalog= MVCPeople;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+  </connectionStrings> -->
+  <connectionStrings>
+    <add name="PeopleDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MVCPeople.mdf;Initial Catalog=MVCPeople;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
+
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
